--- a/src/components/Cities/Bangalore.css
+++ b/src/components/Cities/Bangalore.css
@@ -14,12 +14,13 @@
 }
 
 .bcard {
-  width: 500px;
-  height: 300px;
+  width: 530px;
+  height: 350px;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: #1f1b24;
+  flex-direction: column;
 }
 
 .pcard:hover {
