--- a/src/components/Cities/Hyderabad.css
+++ b/src/components/Cities/Hyderabad.css
@@ -1,19 +1,19 @@
-.mumbai {
+.hyderabad {
   display: flex;
   flex-direction: column;
 }
 
-.mumbai1 {
+.hyderabad1 {
   display: flex;
   flex-direction: row;
 }
 
-.mumbai2 {
+.hyderabad2 {
   display: flex;
   flex-direction: row;
 }
 
-.mcard {
+.hcard {
   width: 530px;
   height: 350px;
   display: flex;
@@ -23,6 +23,6 @@
   flex-direction: column;
 }
 
-.mcard:hover {
+.hcard:hover {
   border: 2px solid #bb86fc;
 }
