--- a/src/components/Cities/Delhi.css
+++ b/src/components/Cities/Delhi.css
@@ -3,19 +3,9 @@
   flex-direction: column;
 }
 
-.delhi1 {
-  display: flex;
-  flex-direction: row;
-}
-
-.delhi2 {
-  display: flex;
-  flex-direction: row;
-}
-
 .dcard {
-  width: 530px;
-  height: 350px;
+  width: fit-content;
+  height: fit-content;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -23,6 +13,6 @@
   flex-direction: column;
 }
 
-.pcard:hover {
+.dcard:hover {
   border: 2px solid #bb86fc;
 }
