--- a/src/components/Cities/Hyderabad.css
+++ b/src/components/Cities/Hyderabad.css
@@ -3,19 +3,9 @@
   flex-direction: column;
 }
 
-.hyderabad1 {
-  display: flex;
-  flex-direction: row;
-}
-
-.hyderabad2 {
-  display: flex;
-  flex-direction: row;
-}
-
 .hcard {
-  width: 530px;
-  height: 350px;
+  width: fit-content;
+  height: fit-content;
   display: flex;
   align-items: center;
   justify-content: center;
